# GSrandomEffect

./: .gitignore  CMakeLists.txt  CMakeLists_win.txt
.github/workflows/: build-windows.yml
Source/: GlitchEngine.cpp  GlitchTypes.h  PluginEditor.cpp  PluginEditor.h
배포/Windows/: CMakeLists.txt  build_and_install.bat
배포/Windows/Source/: GlitchEngine.h  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
